--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,9 +7,198 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  box-sizing: border-box;
+}
+
+
+.countries-bg {
+  padding-top: 1rem;
+  min-height: 100%;
+}
+
+/* ---------TYPOGRAPHY----------- */
+h2 {
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-decoration: none;
+}
+
+h6 {
+  font-size: 0.8rem;
+  font-weight: 800;
+  padding: 0.5rem 0 0.5rem 0;
+  color: hsl(200, 15%, 8%);
+  text-decoration: none;
+}
+
+p {
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+.border-countries-font {
+  font-size: 0.88rem;
+ padding-bottom: 1rem;
+}
+
+
+.header {
+  min-height: 80px;
+}
+
+.header-ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0.25rem;
+  margin: 0;
+}
+
+.header-li {
+  display: inline-block;
+  margin: 0.5rem;
+}
+
+.nav-btn {
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
+
+
+.header h6 {
+  float: right;
+}
+
+.header h3 {
+  float: left;
+}
+
+.header-li h3 {
+  font-size: 1rem;
+  font-weight: 800;
+}
+
+.country-detail-card  {
+  max-width: 100%;
+  margin-top: 2rem;
+}
+
+.country-detail-card img, .country-card-img-wrapper img{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.country-detail-card-img-wrapper {
+  max-width: 100%;
+  padding: 15px;
+}
+
+.country-detail-card-text-wrapper {
+  text-align: left;
+  padding: 15px;
+}
+
+.country-detail-card-text-wrapper h6, .country-detail-card-text-wrapper p {
+  display: inline-block;
+  margin: 0;
+}
+
+.back-btn {
+  margin-top: 1rem;
+  margin-left: 15px;
+  padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+  background-color: Transparent;
+  background-repeat:no-repeat;
+  border: none;
+  cursor:pointer;
+  overflow: hidden;
+  outline:none;
+}
+
+.border-ul-style {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+
+.border-li-style {
+  display: inline-block;
+  padding: 5px 10px 5px 10px;
+  border-radius: 2px;
+}
+
+.country-detail-bottom {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
+
+
+.input-wrapper {
+  margin: 15px;
+}
+
+
+input {
+  width: 100%;
+  padding: 15px;
+  border: none;
+  border-radius: 5px;
+}
+/* -------Country Card Style------ */
+.country-card {
+  background-color: white;
+  margin-bottom: 15px;
+  margin-left: 2rem;
+  margin-right: 2rem;
+  background-color: aqua;
+  border-radius: 5px;
+}
+
+.country-card-text-wrapper {
+  padding: 0.5rem;
+}
+
+.country-card-text-wrapper p {
+  font-weight: 300;
+}
+.country-card-wrapper h6, .country-card-wrapper p {
+  display: inline-block;
+  margin: 0;
+  padding: 0.125rem;
+  font-size: 14px;
+}
+
+.option-wrapper {
+  margin: 15px;
+}
+.option-wrapper label, .option-wrapper select {
+  display: block;
+}
+
+.region-filter {
+  width: 150px;
+  margin-bottom: 0.35rem;
+}
+
+select {
+  border: none;
+  width: 150px;
+  padding: 0.5rem;
+}
+
+
